fixed issue with cards not showing after new game button clicked

--- a/styles.css
+++ b/styles.css
@@ -200,3 +200,7 @@ p {
     width: 50px;
     height: 50px;
 }
+
+#dropdown-menu {
+    /* display: none; */
+}
